<resources>
    <string name="app_name">Scrolly</string>
    <string name="like_btn_desc">Like this post</string>
    <string name="comment_txtView_label">Comment</string>
    <string name="comments_btn_desc">comments</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="New">New here? Register</string>
    <string name="Register">Register</string>
    <string name="Username">Username</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register1">Already a member? Login</string>
    <string name="new_post_txt_hint">What\'s on your mind?</string>
    <string name="send_btn_label">Post</string>
    <string name="cancel_btn_desc">cancel</string>
    <string name="upload_an_image_btn_desc">upload an image</string>
    <string name="forgot">Forgot Your Password?</string>
    <string name="require">Required!</string>
    <string name="emailcheck">incorrect email format.eg:test@test.com</string>
    <string name="passCondition">Your password should contain at least 8 characters and \n at least 3 of the following: uppercase, lowercase, or special characters</string>
    <string name="clickagain">Click BACK again to exit!</string>
    <string name="Welcome">Hello Scroller :)</string>
    <string name="languagepref">Language Preferences</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="logout">Logout</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logot_notice">Logout Notice</string>
    <string name="delete_message">You are about to logout from your account \n Are you sure?</string>
    <string name="RegisterPage">Register</string>
    <string name="mainpage">Main</string>
    <string name="main">Main</string>
    <string name="Profiles">Profile</string>
    <string name="home">Home</string>
    <string name="add">Add Post</string>
    <string name="Profile">Profile</string>
    <string name="save_changes_btn">Save</string>
    <string name="success">Success</string>
    <string name="upload_post_error_msg">Unable to upload post.</string>
    <string name="upload_profile_img_err_msg">Please try again later</string>
    <string name="login_to_use_msg">You have to login to use this feature.</string>

</resources>