<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/timelineFragment">
    <fragment
        android:id="@+id/addPostFragment"
        android:name="com.example.scrolly.feature_addPost.AddPostFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add_post">
        <action
            android:id="@+id/action_addPostFragment_to_timelineFragment"
            app:destination="@id/timelineFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.scrolly.feature_identity.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/timelineFragment"
        android:name="com.example.scrolly.feature_timeline.TimelineFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_timeline">
        <action
            android:id="@+id/action_timelineFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.scrolly.feature_identity.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_timelineFragment"
            app:destination="@id/timelineFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.scrolly.profile.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_timelineFragment"
            app:destination="@id/timelineFragment" />
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>